--- a/aboutus.html
+++ b/aboutus.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Gestion</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="comptabilite.html" aria-expanded="false">Comptabilite</a><a class="text-black dropdown-item text-primary display-4" href="management.html" aria-expanded="false">Management</a><a class="text-black dropdown-item text-primary display-4" href="marketing.html" aria-expanded="false">Marketing</a><a class="text-black dropdown-item text-primary display-4" href="economie.html" aria-expanded="false">Economie</a><a class="text-black dropdown-item text-primary display-4" href="maths-statistiques.html" aria-expanded="false">Maths</a><a class="text-black dropdown-item text-primary display-4" href="maths-statistiques.html" aria-expanded="false">Statistiques</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
                         Informatique</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="informatique.html">Informatique</a><a class="text-black dropdown-item display-4" href="informatique.html">New Item</a><a class="text-black dropdown-item display-4" href="informatique.html">New Item</a><a class="text-black dropdown-item display-4" href="informatique.html">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="coursenligne.html" aria-expanded="false">Cours en ligne<br></a></li>
                 <li class="nav-item"><a class="nav-link link text-black display-4" href="aboutus.html#timeline2-a">A propos</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/221781680443">
@@ -186,7 +186,7 @@
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Pratiquer : Faire des études de cas</h4>      
+                            Pratiquer : Faire des projets</h4>      
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat libero, bibendum in libero tempor, luctus volutpat ligula. Integer fringilla porttitor pretium. Nam erat felis, iaculis id justo ut, ullamcorper feugiat elit. Proin vel lectus auctor, porttitor ligula vitae, convallis leo. In eget massa elit.
                         </p>
@@ -282,7 +282,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
-                            Comptable</h4>
+                            React Native</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.<br><br>
                         </p>
@@ -395,7 +395,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> templates</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site <a href="https://mobirise.site/f" style="color:#aaa;">was designed</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
