--- a/informatique.html
+++ b/informatique.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Gestion</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="comptabilite.html" aria-expanded="false">Comptabilite</a><a class="text-black dropdown-item text-primary display-4" href="management.html" aria-expanded="false">Management</a><a class="text-black dropdown-item text-primary display-4" href="marketing.html" aria-expanded="false">Marketing</a><a class="text-black dropdown-item text-primary display-4" href="economie.html" aria-expanded="false">Economie</a><a class="text-black dropdown-item text-primary display-4" href="maths-statistiques.html" aria-expanded="false">Maths</a><a class="text-black dropdown-item text-primary display-4" href="maths-statistiques.html" aria-expanded="false">Statistiques</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
                         Informatique</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="informatique.html">Informatique</a><a class="text-black dropdown-item display-4" href="informatique.html">New Item</a><a class="text-black dropdown-item display-4" href="informatique.html">New Item</a><a class="text-black dropdown-item display-4" href="informatique.html">New Item</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="coursenligne.html" aria-expanded="false">Cours en ligne<br></a></li>
                 <li class="nav-item"><a class="nav-link link text-black display-4" href="aboutus.html#timeline2-a">A propos</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/221781680443">
@@ -89,7 +89,7 @@
         <div class="container mt-5 pt-5 pb-5">
            <div class="media-container-column" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DZOo1XU9UuTH78kcOLJ9TI/AyLB2BSFIJR9NmcfE8vYzZnBb71ZZyIYVAdJZRc/0PB4N7d3uDn/+RbLMunBUcFDoHT3r1J2Bv80ODD7XBNxZF9FBe1/fcGtqWjPGdKHG">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oqgzeYHdBCC8z44hSNp787WOAf0AbHBQlmsWZXCTIcJS1N47roGye/bwHUP0u1/8XyvHd7Ps5AKcBwPr/CJFkqFE3ojOGeP2P+jNbwR0QPI+iXARGAZcp45c4G/BD6b0">
                     <div class="row justify-content-center form-inline">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -170,11 +170,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_40" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_11" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-5">Suite Open Office / Microsoft Office</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_40" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est une application hors ligne pour Windows et Mac permettant de créer facilement des sites Web de petite et moyenne taille, des pages de destination, des CV et des portfolios en ligne, des sites promotionnels pour des applications, des événements, des services et des produits.</p>
@@ -183,11 +183,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_40" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_11" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-5">Algorithme et langage</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_40" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est parfait pour les non-techniciens qui ne sont pas familiers avec les subtilités du développement web et pour les concepteurs qui préfèrent travailler autant que possible visuellement , sans se battre avec le code. Mobirise est aussi idéal pour les pro-codeurs pour le prototypage rapide et les projets de petits clients.</p>
@@ -196,11 +196,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_40" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_11" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-5">Développement Web</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_40" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Principales différences par rapport aux constructeurs traditionnels :<br>* Extrêmement minimaliste <strong>facile à utiliser</strong> interface<br>* <strong>Mobile</strong>respectueux des dernieres technique web et "out-the-box"<br>* <strong>Gratuit</strong> pour usage commercial et à but non lucratif</p>
@@ -328,7 +328,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">This <a href="https://mobirise.site/e" style="color:#aaa;">web page</a> was built with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Try it</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
